--- a/style.css
+++ b/style.css
@@ -64,6 +64,13 @@ nav ul li a:hover {
 #join{
   margin: 0 0 5px 5px;
 }
+.pop-up {
+  position: absolute;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
 
 #instagram-symbol{
   visibility: visible;
@@ -276,11 +283,8 @@ margin-right: 10px;
   font-size: 3.5em;
   color: white;
   font-weight: normal;
-  
   margin: 100px 20px 0 0;
   font-style: bold;
-  z-index: 9999;
-  
 }
   /**
  * Sets visibility of #fc element to visible.
@@ -290,22 +294,12 @@ margin-right: 10px;
 #fc {
     font-size: 3.5em;
     color: white;
-    font-weight:normal;
-    
+    font-weight: normal;
     margin: 20px 0 20px 0;
     font-style: bold;
   }
 
-/**.button{
-  
-  margin-top: -20%;
-  margin-right: 25%;
-  background-color:  #9dc20a;
-  
-} **/
-.ab{
-  font-size: 1.5rem;
-}
+
 li{
   visibility: hidden;
 }
@@ -325,7 +319,7 @@ li{
   .text-box{
   background-color: rgba(0, 0, 0, 0.3);
   background-size: cover;
-  margin: 0 0 0 0;
+  margin:0;
   width:100%;
   height: 100%;
   }
