--- a/style.css
+++ b/style.css
@@ -65,17 +65,21 @@ nav ul li a:hover {
   margin: 0 0 5px 5px;
 }
 .pop-up {
+  color:#f0f0f0;
+  font-size: 1.2rem;
   display: none;
   position: absolute;
-  padding: 20px;
-  height: 300px;
-  width: 1000px;
-  background: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 0 10px 0 10px;
+  height: 40px;
+  width: fit-content;
+  background-color:#4a4a4a;
+  border-radius: 14px;
   z-index: 9999;
-  margin-top: 10px;
+  margin: 14% 0 0 60%;
+  border: 2px solid white;
+    .waiting{
+      margin: 7px 0 0 0;
+    }
 
 }
 
@@ -97,6 +101,7 @@ nav ul li a:hover {
     background-size: cover;
     height: 80vh;
     display:flex;
+     
     
   }
   .background-photo::content{
