--- a/style.css
+++ b/style.css
@@ -254,6 +254,32 @@ margin-left: 10px;
 #nyc{
 margin-right: 10px;
 }
+
+/*for index2.html*/
+
+.form-box{
+  height: 300px;
+  width: 600px;
+  background-color: #9dc20a;
+  border-radius: 20px;
+  padding: 0 10px 0 10px;
+  border: 5px groove #9dc20a;
+  margin: 40px 0 0 40px;
+  }
+  .form{
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+
+  .form-colone{
+    grid-column: 1;
+  }
+  .form-coltwo{
+    grid-column: 2;
+  }
+  #email{
+    margin: 0 20px 40px 0;
+  }
 /* CSS for screens smaller than 768px (typically smartphones) */
 @media only screen and (max-width: 768px) and (orientation: portrait){ 
   
