--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ margin-right: 10px;
   .form-coltwo{
     grid-column: 2;
   }
-  #email{
+  #eemail{
     margin: 0 20px 40px 0;
   }
 /* CSS for screens smaller than 768px (typically smartphones) */
