--- a/style.css
+++ b/style.css
@@ -46,9 +46,7 @@ nav ul li a {
 }
 
 
-nav ul li a:hover {
-  text-decoration: underline;
-}
+
 .about{
   margin: 1px 0 0 10px;
   visibility: visible;
@@ -61,9 +59,14 @@ nav ul li a:hover {
   border: 2px solid white;
   
 }
+.about:hover{
+  text-decoration: underline;
+  transform: scale(1.1);
+}
 #join{
   margin: 0 0 5px 5px;
 }
+
 .pop-up {
   color:#f0f0f0;
   font-size: 1.2rem;
@@ -125,7 +128,7 @@ nav ul li a:hover {
     background-color: #4a4a4a;
     justify-content: center;
     align-items: center;
-    border-radius: 4px;
+    border-radius: 8px;
     margin-top: 26px;
   }
   .ab{
@@ -134,6 +137,7 @@ nav ul li a:hover {
     display:block;
     font-size: 1.3em;
     margin-top: 18px;
+    font-family: 'rubik', sans-serif;
     
     
   }
@@ -255,14 +259,26 @@ margin-left: 10px;
 margin-right: 10px;
 }
 
+
 /*for index2.html*/
+.home{
+  visibility: visible;
+  margin: 6% 0 0 0;
+  font-size: 1.6rem;
+  
+   
+}
+.home:hover{
+  transform: scale(1.1);
+  text-decoration: underline;
+}
 
 .form-box{
   height: 300px;
   width: 600px;
   background-color: #9dc20a;
   border-radius: 20px;
-  padding: 0 10px 0 10px;
+  padding: 0 10px 30px 30px;
   border: 5px groove #9dc20a;
   margin: 40px 0 0 40px;
   }
@@ -279,6 +295,13 @@ margin-right: 10px;
   }
   #eemail{
     margin: 0 20px 40px 0;
+  }
+  .form-words{
+    text-align: left;
+    font-size: 1.2rem;
+    font-family: 'Rubik', sans-serif;
+    color:#4a4a4a;
+    
   }
 /* CSS for screens smaller than 768px (typically smartphones) */
 @media only screen and (max-width: 768px) and (orientation: portrait){ 
