--- a/style.css
+++ b/style.css
@@ -104,9 +104,8 @@ nav ul li a {
     background-size: cover;
     height: 80vh;
     display:flex;
-     
+    }
     
-  }
   .background-photo::content{
     background-color: rgba(0, 0, 0, 0.5);
   }
@@ -272,31 +271,38 @@ margin-right: 10px;
   transform: scale(1.1);
   text-decoration: underline;
 }
-
-.form-box{
-  height: 300px;
-  width: 600px;
+.form-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   background-color: #9dc20a;
-  border-radius: 20px;
-  padding: 0 10px 30px 30px;
-  border: 5px groove #9dc20a;
-  margin: 40px 0 0 40px;
+  height: 700px;
+}
+
+.col-one {
+  grid-column: 1 / span 1; 
+}
+
+.col-two {
+  grid-column: 2 / span 1;
+  img{
+    height: 100%;
+    width: 100%;
   }
+} 
+
+
   .form{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
+    margin-left: 50px;
   }
 
-  .form-colone{
-    grid-column: 1;
-  }
-  .form-coltwo{
-    grid-column: 2;
-  }
+  
   #eemail{
     margin: 0 20px 40px 0;
   }
   .form-words{
+    margin-left: 50px;
     text-align: left;
     font-size: 1.2rem;
     font-family: 'Rubik', sans-serif;
@@ -306,16 +312,18 @@ margin-right: 10px;
 /* CSS for screens smaller than 768px (typically smartphones) */
 @media only screen and (max-width: 768px) and (orientation: portrait){ 
   
+  
  body{
   display: inline-block;
  }
  
 
  header{
-  max-width: 100%;
+  width: 100%;
   
   
  }
+ 
  .background-photo {
     background-image: url('fotomat images/banner-landingpage.jpg');
     background-size: cover;
@@ -324,6 +332,7 @@ margin-right: 10px;
     background-color: rgba(0, 0, 0, 0.5);
     
   }
+  
   .text-box {
   background-color: rgba(0, 0, 0, 0.3);
   background-size: cover;
@@ -376,6 +385,18 @@ li{
   font-size: 1.7rem;
   margin: 20px 10px 0 10px;
 }
+.form-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  min-height: 740px;
+}
+
+.col-one {
+  grid-column: 1 / span 2; 
+}
+.col-two{
+  display:none;
+}
 }
 @media only screen and (max-width: 768px) and (orientation: landscape){
   .text-box{
@@ -408,7 +429,10 @@ li{
 
 /* CSS for screens between 768px and 1024px (typically tablets) */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  
+  .text-box{
+    
+    margin: 90px 0 0 60px;
+  }
   
 }
 
